--- a/src/main/resources/templates/address/addresses.html
+++ b/src/main/resources/templates/address/addresses.html
@@ -10,33 +10,35 @@ and open the template in the editor.
         <title>Addresses</title> 
         <link rel="stylesheet" type="text/css" href="../../css/style.css" th:href="@{/css/style.css}" />
     </head>
-    <body>
+    <body style = "background: url(../images/vlag.jpg); background-size: 100%;">
         <div class="listTitle">
             <h1 class="center"> Addressoverzicht</h1>
 
             <table id="addresses" class="table table-striped">
                 <thead>
                     <tr>
-                        <th>StreetName</th>
-                        <th>Number</th>
-                        <th>Addition</th>
-                        <th>PostalCode</th>
-                        <th>City</th>
-                        <th>AddressType</th>
-                        <th>KlantName</th>
-                        <th></th>
-                        <th></th>
+                        <th style=" font-size: 25px">StreetName</th>
+                        <th style=" font-size: 25px">Number</th>
+                        <th style=" font-size: 25px">Addition</th>
+                        <th style=" font-size: 25px">PostalCode</th>
+                        <th style=" font-size: 25px">City</th>
+                        <th style=" font-size: 25px">AddressType</th>
+                        <th style=" font-size: 25px">KlantName</th>
+                        <th style=" font-size: 22px">KLantId</th>
+                        <th style=" font-size: 25px"></th>
+                        <th style=" font-size: 25px"></th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr th:each="address:${addressList}">
-                        <td th:text="${address.streetName}"></td>
-                        <td th:text="${address.number}"></td>
-                        <td th:text="${address.addition}"></td>
-                        <td th:text="${address.postalCode}"></td>
-                        <td th:text="${address.city}"></td>
-                        <td th:text="${address.addressType}"></td>
-                        <td th:text="${address.customer.firstName + ' ' + address.customer.lastName}"></td>
+                        <td style=" font-size: 20px" th:text="${address.streetName}"></td>
+                        <td style=" font-size: 20px" th:text="${address.number}"></td>
+                        <td style=" font-size: 20px" th:text="${address.addition}"></td>
+                        <td style=" font-size: 20px" th:text="${address.postalCode}"></td>
+                        <td style=" font-size: 20px" th:text="${address.city}"></td>
+                        <td style=" font-size: 20px" th:text="${address.addressType}"></td>
+                        <td style=" font-size: 20px" th:text="${address.customer.firstName + ' ' + address.customer.lastName}"></td>
+                        <td style=" font-size: 20px" th:text="${address.customer.id}"></td>
                         <td class="small"> 
                             <a th:href="@{'/addresses/update/' + ${address.id}}"><input type="submit" value="update"/></a>
                         </td>
