--- a/src/main/resources/templates/address/updateAddress.html
+++ b/src/main/resources/templates/address/updateAddress.html
@@ -31,21 +31,22 @@ and open the template in the editor.
                 <label>PostalCode</label>:                 
                 <input type="text" th:field="*{postalCode}"  pattern="[1-9][0-9]{3}\s?[a-zA-Z]{2}" 
                        required="required"/><br/><br/>
-                    <label>City</label>:                 
-                    <input type="text" th:field="*{city}"  required="required"/><br/><br/> 
+                <label>City</label>:                 
+                <input type="text" th:field="*{city}"  required="required"/><br/><br/> 
 
-                    <label>CustomerId</label>
-                    <input  type="number" th:field="*{customer.id}" readonly='readonly'/><br/> <br/>
+                <label>CustomerId</label>
+                <input  type="number" th:field="*{customer.id}" readonly='readonly'/><br/> <br/>
 
-                    <label>AddressType</label>
-                    <select th:field="*{addressType}">
-                        <option th:each="dropDownItem : ${addressTypeList}"
-                                th:value="${dropDownItem}"
-                                th:text="${dropDownItem}" />
+                <label>AddressType</label>
+                <select th:field="*{addressType}">
+                    <option th:each="dropDownItem : ${addressTypeList}"
+                            th:value="${dropDownItem}"
+                            th:text="${dropDownItem}" />
 
-                    </select> <br/><br/>
+                </select> <br/><br/>
 
-                    <input  type="submit" value="wijzigen" />  
+                <input  type="submit" value="wijzigen" />  
+                <a class="button center" th:href="@{/addresses}">Naar Addressoverzicht</a>
 
             </form>
         </div>
